# rPaaS

./: README.md  pyproject.toml  requirements.txt  setup.py  verify_auto_order_flow.py
.github/workflows/: build.yml  merge.yml  release.yml
paas/: __init__.py  branding.py  hooks.py  install.py  seed.py  utils.py  verification_utils.py  versions.json
paas/api/: app_links.py  remote_config.py  repeating_order.py  translation.py  utils.py
paas/api/admin_content/: admin_content.py
paas/api/admin_data/: admin_data.py
paas/api/admin_logistics/: admin_logistics.py
paas/api/admin_management/: admin_management.py
paas/api/admin_records/: admin_records.py
paas/api/admin_reports/: admin_reports.py
paas/api/admin_settings/: admin_settings.py
paas/api/admin_system/: admin_system.py
paas/api/ads_package/: ads_package.py
paas/api/auth/: auth.py
paas/api/blog/: blog.py
paas/api/branch/: branch.py
paas/api/brand/: brand.py
paas/api/career/: career.py
paas/api/cart/: cart.py
paas/api/category/: category.py
paas/api/cook/: cook.py
paas/api/coupon/: coupon.py
paas/api/delivery/: delivery.py
paas/api/delivery_man/: delivery_man.py
paas/api/delivery_zone/: delivery_zone.py
paas/api/driver/: driver.py
paas/api/driver_order/: driver_order.py
paas/api/driver_parcel/: driver_parcel.py
paas/api/driver_report/: driver_report.py
paas/api/faq/: faq.py
paas/api/language/: language.py
paas/api/lending/: lending.py
paas/tests/: __init__.py  test_flutterwave.py
paas/whatsapp/: handlers.py
paas/www/: index.py  pay.html  pay.py
(+47 files in other folders)
