[project]
name = "paas"
authors = [
    { name = "ROKCT.ai", email = "admin@rokct.ai"}
]
description = "PaaS App for Rokct"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "staticmap",
    "pillow",
    "cryptography",
    "sentence-transformers",
    "requests"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# [tool.frappe]
# authors = "Frappe Technologies Pvt. Ltd."
# email = "hello@frappe.io"
# website = "https://frappe.io"
